# open-vcluster-api

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  QuickStart.md  README.md  ROADMAP.md  TODO.md  buf.yaml  go.mod
api/proto/: buf.yaml  vcluster_api.proto
api/proto/vcluster/api/v1/: vcluster_api.proto
api/v1/: vcluster_api.pb.go  vcluster_api_test.go
api/vcluster/api/v1/: vcluster_api.pb.go  vcluster_api_grpc.pb.go
docs/: api-semantics.md  architecture.md  overview.md  sdk-generation.md  vcluster-class-diagram.md
docs/api/: api-reference.md
docs/mermaid/: lifecycle-sequence.md
examples/simple-client-go/: go.mod  main.go
examples/simple-server-go/: go.mod  main.go
examples/vcluster-adapter-controller/: go.mod  main.go
examples/vcluster-adapter-controller/controller/: vcluster_controller.go
examples/vcluster-adapter-controller/vclusteradapter/: adapter.go
scripts/: generate-sdk.sh
sdk/go/: go.mod  vcluster_api_grpc.pb.go
sdk/go/vcluster/api/v1/: vcluster_api.pb.go
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/open_vcluster_api/: __init__.py  vcluster_api_pb2.py  vcluster_api_pb2.pyi  vcluster_api_pb2_grpc.py
sdk/python/open_vcluster_api/vcluster/api/v1/: vcluster_api_pb2.py  vcluster_api_pb2.pyi  vcluster_api_pb2_grpc.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: index.ts
sdk/typescript/src/vcluster/api/v1/: vcluster_api_grpc_pb.d.ts  vcluster_api_grpc_pb.js  vcluster_api_pb.d.ts  vcluster_api_pb.js
tools/: buf.gen.go.yaml  buf.gen.yaml  buf.yaml
